syntax = "proto3";

package logistics;

message InventoryDTO{
  string RequestID = 1;
  string Warehouse = 2;
  string ItemNo = 3;
  int64 Qty = 4;
}

message InventoriesDTO{
  string Warehouse = 1;
  repeated InventoryDTO Inventories = 2;
}

message MsgResult{
  string MsgCode = 1;
}

service InventoryService {
  rpc GetOnHandQty (InventoryDTO) returns (InventoryDTO) {}
  rpc SetOnHandQty (InventoryDTO) returns (MsgResult) {}

  rpc Hold (InventoryDTO) returns (MsgResult) {}
  rpc Unhold (InventoryDTO) returns (MsgResult) {}

  rpc GetOnHoldQty (InventoryDTO) returns (InventoryDTO) {}
  rpc SetOnHoldQty (InventoryDTO) returns (MsgResult) {}

  rpc GetAvbQty(InventoryDTO) returns (InventoryDTO) {}
  rpc GetAvbQtys(InventoriesDTO) returns (InventoriesDTO) {}

  rpc GetWarehouseOnHandQtys(InventoriesDTO) returns (InventoriesDTO) {}
  rpc GetWarehouseOnHoldQtys(InventoriesDTO) returns (InventoriesDTO) {}
  
  rpc ShipConfirm(InventoriesDTO) returns (MsgResult) {}
  rpc CancelShipConfirm(InventoriesDTO) returns (MsgResult) {}

  rpc CleanWarehouse(InventoriesDTO) returns (MsgResult) {}
}